# linkpred

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE  README.rst  TODO.md  linkpred.spec  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: coverage.yml  publish-to-pypi.yml  tox.yml
examples/: inf1990-2004.net  inf2005-2009.net  test.net  training.net
linkpred/: __init__.py  cli.py  core.py  exceptions.py  linkpred.py  preprocess.py  result.py  util.py
linkpred/evaluation/: __init__.py  comparison.py  listeners.py  ranked.py  scoresheet.py  signals.py  static.py
linkpred/evaluation/tests/: test_comparison.py  test_scoresheet.py  test_static.py
linkpred/network/: __init__.py  addremove.py  algorithms.py  community.py  misc.py  pajek.py
linkpred/predictors/: __init__.py  base.py  eigenvector.py  misc.py  neighbour.py  path.py  util.py
linkpred/predictors/tests/: test_base.py  test_misc.py  test_neighbour.py  test_path.py
linkpred/tests/: test_cli.py  test_linkpred.py  test_preprocess.py  test_result.py
linkpred/util/: __init__.py  log.py
linkpred/util/tests/: test_util.py
scripts/: linkpred
tests/: test_addremove.py  test_cli.py  test_evaluation_static.py  test_functional.py  test_linkpred.py  test_listeners.py  test_misc.py  test_network_algorithms.py  test_predictors_base.py  test_predictors_eigenvector.py  test_predictors_misc.py  test_predictors_neighbour.py  test_predictors_path.py  test_preprocess.py  test_scoresheet.py  test_util.py  utils.py
