[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "linkpred"
authors = [{name = "Raf Guns", email = "raf.guns@uantwerpen.be"}]
readme = "README.rst"
dynamic = ["version", "description"]
classifiers = [
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "License :: OSI Approved",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Software Development",
        "Topic :: Scientific/Engineering",
        "Development Status :: 4 - Beta",
        "Natural Language :: English",
        "Operating System :: OS Independent",
]
requires-python=">=3.8"
dependencies = [
        "matplotlib>=3.5",
        "networkx>=3.0",
        "numpy>=1.23",
        "pyyaml>=3.0",
        "scipy>=1.10",
        "smokesignal>=0.7",
]

[project.scripts]
linkpred = "linkpred.cli:main"

[project.optional-dependencies]
dev = ["pytest >=7.1", "pytest-cov", "tox>=4.4"]
community = ["python-louvain"]
all = ["pytest >=7.1", "pytest-cov", "tox>=4.4", "python-louvain"]

[project.urls]
Home = "https://github.com/rafguns/linkpred/"

[tool.flit.module]
name = "linkpred"

[tool.ruff]
target-version = "py38"
# See https://beta.ruff.rs/docs/rules/
select = [
    "A", # builtin shadowing
    "ARG", # unsued arguments
    "B", # bugbear
    "C4", # comprehensions
    "C90", # mccabe complexity
    "E", # style errors
    "EM", # error messages
    "F", # flakes
    "FBT", # boolean trap
    "G", # logging format
    "I", # import sorting
    "ISC", # string concatenation
    "N", # naming
    "PGH", # pygrep-hooks
    "PIE", # miscellaneous
    "PL", # pylint
    "PT", # pytest style
    "Q", # quotes
    "RET", # return
    "RSE", # raise
    "RUF", # Ruff
    "SIM", # simplify
    "T20", # print
    "UP", # upgrade
    "W", # style warnings
    "YTT", # sys.version
]

ignore = [
    "N803", # Argument name `G` should be lowercase
    "N806", # "Variable `G` in function should be lowercase"
    "PLR0913", # Too many arguments to function call
]

[tool.ruff.per-file-ignores]
# Ignore unused imports in __init__.py
"__init__.py" = ["F401", "F403"]
